// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressCard component should render correct lesson progress for 0% completion 1`] = `
<div>
  <div
    class="progress-card__container d-flex card shadow-sm mt-3 bg-primary text-white p-2 border-0"
  >
    <div
      class="card-body"
    >
      <div
        class="progress-card__wrapper d-flex align-items-center"
      >
        <svg
          viewBox="0 0 40 40"
          width="65px"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#3a22b8"
            stroke-width="4.5"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#fff"
            stroke-dasharray="0 100"
            stroke-dashoffset="20"
            stroke-width="4.5"
          />
          <g
            class="circle-label"
          >
            <text
              color="#fff"
              fill="#fff"
              style="font: sans-serif 10px bold 10px;"
              x="15"
              y="23"
            >
              0
              <tspan
                font-size="8px"
              >
                %
              </tspan>
            </text>
          </g>
        </svg>
      </div>
      <h4
        class="progress-card__title mt-3"
      >
        You're off to a great start!
      </h4>
      <div
        class="mt-3"
      >
        Login to
        <a
          class="progress-newuser__chatlink text-white"
          href="https://chat.c0d3.com/login"
          rel="noopener noreferrer"
          target="_blank"
        >
          chat.c0d3.com
        </a>
        to ask your questions.
        <p>
          Start by setting up your development environment and then follow the lessons in the course.
        </p>
      </div>
      <a
        class="btn btn-light progress-card__button mt-2 text-primary"
        href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4#10ab6286f4d942c58bd330f68cb8cb95"
        rel="noopener noreferrer"
        target="_blank"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;

exports[`ProgressCard component should render correct lesson progress for 25% completion 1`] = `
<div>
  <div
    class="progress-card__container d-flex card shadow-sm mt-3 bg-primary text-white p-2 border-0"
  >
    <div
      class="card-body"
    >
      <div
        class="progress-card__wrapper d-flex align-items-center"
      >
        <svg
          viewBox="0 0 40 40"
          width="65px"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#3a22b8"
            stroke-width="4.5"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#fff"
            stroke-dasharray="25 75"
            stroke-dashoffset="20"
            stroke-width="4.5"
          />
          <g
            class="circle-label"
          >
            <text
              color="#fff"
              fill="#fff"
              style="font: sans-serif 10px bold 10px;"
              x="11"
              y="23"
            >
              25
              <tspan
                font-size="8px"
              >
                %
              </tspan>
            </text>
          </g>
        </svg>
      </div>
      <h4
        class="progress-card__title mt-3"
      >
        Keep up the great work!
      </h4>
      <div
        class="mt-3"
      >
        Login to
        <a
          class="progress-newuser__chatlink text-white"
          href="https://chat.c0d3.com/login"
          rel="noopener noreferrer"
          target="_blank"
        >
          chat.c0d3.com
        </a>
        to ask your questions.
        <p>
          Start by setting up your development environment and then follow the lessons in the course.
        </p>
      </div>
      <a
        class="btn btn-light progress-card__button mt-2 text-primary"
        href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4#10ab6286f4d942c58bd330f68cb8cb95"
        rel="noopener noreferrer"
        target="_blank"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;

exports[`ProgressCard component should render correct lesson progress for 75% completion 1`] = `
<div>
  <div
    class="progress-card__container d-flex card shadow-sm mt-3 bg-primary text-white p-2 border-0"
  >
    <div
      class="card-body"
    >
      <div
        class="progress-card__wrapper d-flex align-items-center"
      >
        <svg
          viewBox="0 0 40 40"
          width="65px"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#3a22b8"
            stroke-width="4.5"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#fff"
            stroke-dasharray="75 25"
            stroke-dashoffset="20"
            stroke-width="4.5"
          />
          <g
            class="circle-label"
          >
            <text
              color="#fff"
              fill="#fff"
              style="font: sans-serif 10px bold 10px;"
              x="11"
              y="23"
            >
              75
              <tspan
                font-size="8px"
              >
                %
              </tspan>
            </text>
          </g>
        </svg>
      </div>
      <h4
        class="progress-card__title mt-3"
      >
        Well done! You're over half way!
      </h4>
      <div
        class="mt-3"
      >
        Login to
        <a
          class="progress-newuser__chatlink text-white"
          href="https://chat.c0d3.com/login"
          rel="noopener noreferrer"
          target="_blank"
        >
          chat.c0d3.com
        </a>
        to ask your questions.
        <p>
          Start by setting up your development environment and then follow the lessons in the course.
        </p>
      </div>
      <a
        class="btn btn-light progress-card__button mt-2 text-primary"
        href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4#10ab6286f4d942c58bd330f68cb8cb95"
        rel="noopener noreferrer"
        target="_blank"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;

exports[`ProgressCard component should render correct lesson progress for 100% completion 1`] = `
<div>
  <div
    class="progress-card__container d-flex card shadow-sm mt-3 bg-primary text-white p-2 border-0"
  >
    <div
      class="card-body"
    >
      <div
        class="progress-card__wrapper d-flex align-items-center"
      >
        <svg
          viewBox="0 0 40 40"
          width="65px"
        >
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#3a22b8"
            stroke-width="4.5"
          />
          <circle
            cx="20"
            cy="20"
            fill="transparent"
            r="17"
            stroke="#fff"
            stroke-dasharray="100 0"
            stroke-dashoffset="20"
            stroke-width="4.5"
          />
          <g
            class="circle-label"
          >
            <text
              color="#fff"
              fill="#fff"
              style="font: sans-serif 10px bold 10px;"
              x="9"
              y="23"
            >
              100
              <tspan
                font-size="8px"
              >
                %
              </tspan>
            </text>
          </g>
        </svg>
      </div>
      <h4
        class="progress-card__title mt-3"
      >
        Congratulations! You've finished the course!
      </h4>
      <div
        class="mt-3"
      >
        Login to
        <a
          class="progress-newuser__chatlink text-white"
          href="https://chat.c0d3.com/login"
          rel="noopener noreferrer"
          target="_blank"
        >
          chat.c0d3.com
        </a>
        to ask your questions.
        <p>
          Start by setting up your development environment and then follow the lessons in the course.
        </p>
      </div>
      <a
        class="btn btn-light progress-card__button mt-2 text-primary"
        href="https://www.notion.so/Setup-Instructions-fc8f8fcc1376482ead839fa6b1034cb4#10ab6286f4d942c58bd330f68cb8cb95"
        rel="noopener noreferrer"
        target="_blank"
      >
        Setup Development Environment
      </a>
    </div>
  </div>
</div>
`;
